--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,5 +1,5 @@
 .header {
-    background-color:rgba(0, 0, 0, 0.25);
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -131,11 +131,14 @@
     border-radius: 4px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     padding: 8px 0;
-
+    ul {
+      list-style-type: none; // Bỏ dấu chấm trong danh sách
+  }
     li {
       color: black;
       padding: 8px 16px;
       cursor: pointer;
+      list-style-type: none;
 
       &:hover {
         background-color: #f5f5f5;
