--- a/src/page/login/index.scss
+++ b/src/page/login/index.scss
@@ -65,7 +65,18 @@
   }
 
   .signup-link {
-    margin-top: 20px;
+    margin-top: 10px;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+
+    a {
+      color: #ff4081;
+      font-weight: bold;
+    }
+  }
+  .forgot-link {
+   
     text-align: center;
     color: white;
     font-size: 14px;
