--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,25 +1,27 @@
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 50px;
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  width: 100%;
+  transition: background-color 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.2);
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    width: 100%;
-    transition: background-color 0.3s ease;
-    background-color: rgba(0, 0, 0, 0.2); 
-
-    &.scrolled {
-        background-color: rgb(59, 90, 102);
-    }
+  &.scrolled {
+      // background-color: rgba(245, 240, 240, 0.9);
+      background-color: #333;
+  }
 
   &__logo {
-    cursor: pointer;
+      cursor: pointer;
   }
+
   &__nav {
       display: flex;
       justify-content: space-between;
@@ -30,125 +32,97 @@
       &-center {
           flex-grow: 1;
           display: flex;
-          justify-content: center;
-
+          justify-content: center; 
+          align-items: center;
+          margin-left: 180px;
           ul {
               display: flex;
               list-style-type: none;
               padding: 0;
               margin: 0;
-              gap: 30px;
-              font-size: 18px;
+              gap: 40px;
+              font-size: 30px;
+              
 
               li {
                   color: white;
                   cursor: pointer;
-              }
-          }
-      }
-
-      &-right {
-          ul {
-              display: flex;
-              list-style-type: none;
-              padding: 0;
-              margin: 0;
-              gap: 20px;
-              font-size: 30px;
-
-              li {
-                  color: white;
-                  cursor: pointer;
-
-                  .ant-dropdown-trigger {
-                    color: white;
-                  }
-              }
-          }
-      }
-
-      &-left, &-right {
-          ul {
-              display: flex;
-              list-style-type: none;
-              padding: 0;
-              margin: 0;
-              gap: 30px;
-              font-size: 30px;
-
-              li {
-                  color: white;
-                  a {
-                      color: white;
-                      text-decoration: none;
-                  }
-                  cursor: pointer; // Thêm hiệu ứng con trỏ cho các mục trong danh sách
-
-                  .ant-dropdown-trigger {
-                    color: white;
-                  }
               }
           }
       }
 
       &-left {
-          flex-grow: 1;
-          display: flex;
-          justify-content: center;
-      }
-
-      &-right {
-          ul {
-              gap: 20px;
-          }
-      }
-
-      &-center, &-right {
+          
           ul {
               display: flex;
               list-style-type: none;
               padding: 0;
               margin: 0;
-              gap: 30px;
-              font-size: 18px;
+              gap: 20px;
+              font-size: 30px;
 
               li {
                   color: white;
                   cursor: pointer;
+                 
+                  a {
+                      color: white;
+                      text-decoration: none;
+                  }
+
+                  .ant-dropdown-trigger {
+                      color: white;
+                  }
               }
           }
       }
-  }
-  
-  &__search-input {
-    width: 0;
-    opacity: 0;
-    transition: width 0.3s ease, opacity 0.3s ease;
-  }
 
-  &__search-input.show {
-    width: 200px;
-    opacity: 1;
+      &-right {
+    
+        ul {
+            display: flex;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            gap: 30px;
+            font-size: 30px;
+       
+    
+            li {
+                color: white;
+                cursor: pointer;
+            }
+        }
+    }
   }
 
   &__dropdown-menu {
-    background-color: white;
-    border-radius: 4px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    padding: 8px 0;
-    ul {
-      list-style-type: none; // Bỏ dấu chấm trong danh sách
-  }
-    li {
-      color: black;
-      padding: 8px 16px;
-      cursor: pointer;
-      list-style-type: none;
+      background-color: white;
+      border-radius: 4px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      padding: 8px 0;
 
-      &:hover {
-        background-color: #f5f5f5;
+      ul {
+          list-style-type: none;
       }
-    }
+
+      li {
+          color: black;
+          padding: 8px 16px;
+          cursor: pointer;
+          list-style-type: none;
+
+          &:hover {
+              background-color: #f5f5f5;
+          }
+      }
   }
-  
+}
+
+.search-bar {
+  display: flex;
+}
+
+.search-bar .anticon {
+  cursor: pointer;
 }
