--- a/src/components/menu/index.scss
+++ b/src/components/menu/index.scss
@@ -1,30 +1,81 @@
 .containerMenuAndFishList {
-    margin-top: 20px;
-    width: 100%;
-    display: flex;
-    margin-bottom: 20px;
-    padding-right: 10px;
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  margin-bottom: 20px;
+  padding-right: 10px;
+}
+
+.menuBar {
+  width: 200px;
+  flex-shrink: 0;
+}
+
+.menuFish-Config {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menuFish {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  flex-grow: 1;
+  padding-left: 10px;
+  width: 100%;
+}
+
+.fish-list .card {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.fish-card {
+  width: auto;
+}
+
+.showMoreButton {
+  margin-top: 30px;
+  border-width: 0;
+  font-size: 16px;
+  background-color: #000;
+  color: #fff;
+  font-weight: bold;
+  width: 150px;
+  height: 35px;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+
+  > span {
+    position: relative;
+    z-index: 1;
   }
-  
-  .menuBar {
-    width: 200px; /* Fixed width of 200px for the menu */
-    flex-shrink: 0; /* Prevent shrinking */
+
+  &::before {
+    content: "";
+    background: linear-gradient(135deg, black, #00008b);
+    position: absolute;
+    inset: 0;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    border-radius: inherit;
+    z-index: 0;
   }
-  
-  .menuFish {
-    display: grid; /* Grid layout for fish items */
-    grid-template-columns: repeat(4, 1fr); /* 4 items per row */
-    grid-gap: 20px; /* 10px gap between the items */
-    flex-grow: 1; /* Allow this section to take remaining space */
-    padding-left: 10px; /* Space between menu and fish-list */
-    width: 500px;
+
+  &:hover::before {
+    opacity: 0;
   }
-  
-  .fish-list .card {
-    width: 100%;
-    box-sizing: border-box; /* Ensure padding does not affect width */
+
+  &:hover {
+    background-color: #000 !important;
+    color: #fff;
+    transform: scale(1.05);
   }
-  .fish-card {
-    width: auto;
+
+  &:not(.dangerous):not([disabled]) {
+    border-width: 0;
   }
-  
+}
