--- a/src/card/index.scss
+++ b/src/card/index.scss
@@ -1,10 +1,14 @@
 .fish-card{
+    max-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width:calc(100% /4);
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 0 17px 6px rgba(0,0,0,0.1);
     transition: all 0.3s;
-
+    
     img{
         width:100%;
         aspect-ratio: 3/2;
@@ -13,13 +17,27 @@
 
     &__info{
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center; 
         font-weight: 600;
         margin-bottom: 8px;
+        font-size: 16px;
+        color: #333;
+        gap: 10px; // 
     }
 
     &__content{
         padding: 20px;
+    }
+
+    &__description{
+        align-items: center;
+        height: auto; 
+        font-size: 14px;
+        color: #555; 
+        font-weight: 400;
+        margin-top: 10px;
+        line-height: 1.5; 
     }
 
     &:hover{
@@ -43,12 +61,6 @@
             color: #1e1b1c;
         }
 
-    }
-    &__description{
-        height: 50px;
-        font-size: 14px;
-        color: #707070;
-        font-weight: 300px;
     }
 }
 
