--- a/src/card/index.scss
+++ b/src/card/index.scss
@@ -10,9 +10,32 @@
     transition: all 0.3s;
     
     img{
-        width:100%;
+        width: 100%;
         aspect-ratio: 3/2;
         object-fit: cover;
+        position: relative; // Ensure the image container is positioned relatively
+        transition: filter 0.3s; // Add transition for smooth effect
+        cursor: pointer;
+    }
+
+    .eye-icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: opacity 0.3s;
+        pointer-events: none;
+        font-size: 4rem; // Increase the size of the eye icon
+        padding-bottom: 75%;
+    }
+
+    &:hover img {
+        filter: brightness(0.5); // Darken the image
+    }
+
+    &:hover img + .eye-icon {
+        opacity: 1;
     }
 
     &__info{
