--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -118,6 +118,21 @@
           }
       }
   }
+
+  &__nav-right .cart-count {
+    position: relative;
+    top: -15px;
+    right: -3px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 14px;
+    font-weight: bold;
+    display: inline-block;
+    min-width: 20px;
+    text-align: center;
+  }
 }
 
 .search-bar {
