--- a/src/components/menu/index.scss
+++ b/src/components/menu/index.scss
@@ -5,10 +5,15 @@
   margin-bottom: 20px;
   padding-right: 10px;
 }
-
+.Input-Menu {
+  font-size: 16px;
+  width: 170px;
+}
 .menuBar {
   width: 200px;
   flex-shrink: 0;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .menuFish-Config {
