--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 15px 50px;
-  
+  height: 100px;
   position: fixed;
   top: 0;
   left: 0;
@@ -21,6 +21,15 @@
 
   &__logo {
       cursor: pointer;
+      width: 100px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img{
+        width: 50px;
+        height: 50px;
+      }
   }
 
   &__nav {
